Update example ENV

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 
 # --- Identity Vault (required) ---
 # Base URL of Hack Club Account API (production or staging)
-IDENTITY_URL="https://account.hackclub.com"
+IDENTITY_URL="https://auth.hackclub.com"
 # OAuth client credentials for this app (obtain from Identity Vault)
 IDENTITY_CLIENT_ID="your_client_id"
 IDENTITY_CLIENT_SECRET="your_client_secret"
