Hack Club Account -> Hack Club Auth

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 # Copy this file to `.env` and fill in the values. Do NOT commit your real secrets.
 
 # --- Identity Vault (required) ---
-# Base URL of Hack Club Account API (production or staging)
-IDENTITY_URL="https://account.hackclub.com"
+# Base URL of Hack Club Auth API (production or staging)
+IDENTITY_URL="https://auth.hackclub.com"
 # OAuth client credentials for this app (obtain from Identity Vault)
 IDENTITY_CLIENT_ID="your_client_id"
 IDENTITY_CLIENT_SECRET="your_client_secret"
